    values are allowed if not appropriate, and that no overflows occur.
    Closes: #580038
  * Switch start-stop-daemon(8) man page examples from /var/run to /run.
  * Do not obscure Dpkg::Source::Package ‘require’ errors with custom
    error message. Thanks to Thomas Adam <thomas.adam@smoothwall.net> and
    Jonathan Nieder <jrnieder@gmail.com>.

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * French (Christian Perrier). Fixes a mistranslation and some
    inconsistencies reported by Vincent Danjean( thanks). Closes: #673158

 -- Guillem Jover <guillem@debian.org>  Fri, 27 Apr 2012 10:33:09 +0200

dpkg (1.16.3) unstable; urgency=low

  [ Guillem Jover ]
  * Do not look for newline beyond the read buffer on dpkg-deb extract.
  * Check update-alternative name and link arguments for all commands.
    Closes: #665050
  * Check all dpkg-divert filename arguments to be absolute and to not
    contain newlines. Closes: #21722
  * Print errors while reading the file list files on a new line instead
    of just after the progress percentage. Closes: #552517
  * Document in dpkg-source(1) that patches for source format “3.0 (quilt)”
    are expected to apply without any fuzz. Closes: #666752
    Based on a patch by Luca Capello <luca@pca.it>.
  * Remove redundant -Wformat-security from default dpkg-buildflags, which
    is already implied by -Werror=format-security. Closes: #664964
    Suggested by Peter Eisentraut <petere@debian.org>.
  * Document in dpkg-query(1) that commands producing multiple paragraphs
    will preserve the order of the packages specified on the argument list.
  * Change start-stop-daemon --exec on GNU/Hurd, FreeBSD, NetBSD, OpenBSD
    and Solaris to check for executables matching device and inode numbers
    instead of filenames.
  * Change start-stop-daemon --name on GNU/Hurd to check the process' argv[1]
    in addition to argv[0], to handle both binaries and interpreted scripts.