@@ -31,6 +31,7 @@ dpkg (1.16.4) UNRELEASED; urgency=low
   * Do not obscure Dpkg::Source::Package ‘require’ errors with custom
     error message. Thanks to Thomas Adam <thomas.adam@smoothwall.net> and
     Jonathan Nieder <jrnieder@gmail.com>.
+  * Add new Dpkg::Substvars::set_as_used() member function.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
